--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,27 @@
 html {
-  @-moz-viewport { width: device-width; scale: 1; }
-  @-ms-viewport { width: device-width; scale: 1; }
-  @-o-viewport { width: device-width; scale: 1; }
-  @-webkit-viewport { width: device-width; scale: 1; }
-  @viewport { width: device-width; scale: 1; }
+  font-family: sans-serif;
+  box-sizing: border-box;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  box-sizing: border-box;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
+body {
+  margin: 0;
+}
+
+.img-flex {
+  width: 100%;
+  display: block;
 }
